# boxcar

./: Cargo.toml  DESIGN.md  README.md
.github/workflows/: check.yml  ci.yml  safety.yml
benches/: bench.rs
src/: buckets.rs  lib.rs  loom.rs  raw.rs
src/slotmap/: basic.rs  mod.rs
src/vec/: mod.rs  raw.rs
tests/: loom.rs  loom_buckets.rs  loom_slotmap.rs  vec.rs
