[package]
name = "boxcar"
version = "0.2.8"
authors = ["Ibraheem Ahmed <ibraheem@ibraheem.ca>"]
edition = "2021"
license = "MIT"

readme = "README.md"
description = "A concurrent, append-only vector"
repository = "https://github.com/ibraheemdev/boxcar"

keywords = ["concurrent","vector","lock-free"]
categories = ["concurrency", "data-structures"]
exclude = [
  ".gitignore",
  ".github/**",
]

[[bench]]
name = "bench"
harness = false

[dependencies]

[target.'cfg(loom)'.dependencies]
loom = { version = "0.7" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }

[dev-dependencies]
criterion = "0.3.5"
